<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <LinearLayout
        android:layout_width="229dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="61dp"
        android:layout_marginTop="145dp"
        android:background="@color/white"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/promptDriveTitle"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/promptDriveText"
            android:textColor="@color/black" />

        <RadioGroup
            android:id="@+id/rgDirectionMode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbDriveHere"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/uiNormal"
                android:checked="true"
                android:text="@string/promptDriveDriveHere"
                android:textColor="@color/black" />

            <RadioButton
                android:id="@+id/rbDriveSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/uiNormal"
                android:text="@string/promptDriveSearch"
                android:textColor="@color/black" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnDirectionCancel"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genericCancel" />

            <Button
                android:id="@+id/btnDirectionOk"
                style="?attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genericOk" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>